paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/PAID_Order_Item_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PAID Order Item Field Mapping</label>
    <pluralLabel>PAID Order Item Field Mappings</pluralLabel>
</CustomObject>