paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this field mapping is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>