paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes or documentation for this mapping</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>