paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description>Specifies which operation(s) this mapping applies to</description>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
                <default>true</default>
                <label>Create</label>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>