paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/fields/PAID_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PAID_Field_Name__c</fullName>
    <description>The field name expected by the PAID API</description>
    <label>PAID Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>