paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <description>Parent relationship field for nested objects (e.g., Product2.Name)</description>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>