paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/fields/Salesforce_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_API_Name__c</fullName>
    <description>API name of the Salesforce field to map</description>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>