paid/force-app/main/default/objects/PAID_Order_Item_Field_Mapping__mdt/fields/Transformation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Rule__c</fullName>
    <description>Transformation to apply to the field value</description>
    <label>Transformation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>ToUpperCase</fullName>
            </value>
            <value>
                <fullName>ToLowerCase</fullName>
            </value>
            <value>
                <fullName>MultiplyBy100</fullName>
            </value>
            <value>
                <fullName>DivideBy100</fullName>
            </value>
            <value>
                <fullName>DateToString</fullName>
            </value>
            <value>
                <fullName>DateTimeToString</fullName>
            </value>
            <value>
                <fullName>BooleanToString</fullName>
            </value>
            <value>
                <fullName>RemoveSpaces</fullName>
            </value>
            <value>
                <fullName>TrimWhitespace</fullName>
            </value>
            <value>
                <fullName>DateToISODateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>